--- a/website sederhana/index.html
+++ b/website sederhana/index.html
@@ -30,29 +30,47 @@
         <div class="hero"></div>
 
         <!--main-->
-        <div class="content">
-            <h2>Tittle Website</h2>
-            <p class="authors">Ditulis oleh <a href="#">@wellkit</a>.</p>
-            <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut deserunt provident eum veniam modi nulla
-                vero ad. Provident perspiciatis accusantium delectus dolor dolores illo amet nisi odit minima. Iusto,
-                quam.
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit animi, labore impedit veniam, alias
-                deleniti cupiditate natus commodi magni dolorem, laudantium nobis debitis quaerat? Hic perspiciatis
-                laudantium quod numquam rem.
-            </p>
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores et cum vitae magni repudiandae corporis
-                quam earum, quos veritatis repellat odit delectus reprehenderit labore, in asperiores aliquid sunt,
-                ullam omnis. Voluptas corrupti doloremque dolorem fugit sit eaque eligendi a, aperiam aliquam inventore
-                repellat molestias odit magni mollitia optio facere laborum, voluptatum consequuntur nam beatae et quasi
-                eum! Repellendus quam incidunt minima expedita, officiis explicabo repellat, ad deserunt, laudantium
-                aspernatur voluptatum illo earum harum odit nobis amet tenetur placeat dignissimos aliquam aut
-                laboriosam quidem. Unde, explicabo voluptate debitis odit libero voluptas beatae porro repellendus
-                repellat! Ex nam laboriosam dolores alias quibusdam.
-            </p>
+        <div class="content cf">
+            <div class="main">
+                <h2>Tittle Website</h2>
+                <p class="authors">Ditulis oleh <a href="#">@wellkit</a>.</p>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut deserunt provident eum veniam modi
+                    nulla
+                    vero ad. Provident perspiciatis accusantium delectus dolor dolores illo amet nisi odit minima.
+                    Iusto,
+                    quam.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit animi, labore impedit veniam,
+                    alias
+                    deleniti cupiditate natus commodi magni dolorem, laudantium nobis debitis quaerat? Hic perspiciatis
+                    laudantium quod numquam rem.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores et cum vitae magni repudiandae
+                    corporis
+                    quam earum, quos veritatis repellat odit delectus reprehenderit labore, in asperiores aliquid sunt,
+                    ullam omnis. Voluptas corrupti doloremque dolorem fugit sit eaque eligendi a, aperiam aliquam
+                    inventore
+                    repellat molestias odit magni mollitia optio facere laborum, voluptatum consequuntur nam beatae et
+                    quasi
+                    eum! Repellendus quam incidunt minima expedita, officiis explicabo repellat, ad deserunt, laudantium
+                    aspernatur voluptatum illo earum harum odit nobis amet tenetur placeat dignissimos aliquam aut
+                    laboriosam quidem. Unde, explicabo voluptate debitis odit libero voluptas beatae porro repellendus
+                    repellat! Ex nam laboriosam dolores alias quibusdam.
+                </p>
+            </div>
+            <div class="sidebar">
+                <h3>Tentang Author</h3>
+                <img src="pngegg.png" alt="Author">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis error dicta ipsum quas, quaerat
+                    vitae perferendis inventore quae laborum dolor obcaecati quisquam accusantium enim dolore nobis ea
+                    deserunt recusandae est.
+                </p>
+            </div>
+
         </div>
         <div class="footer">
             <p class="copy">Copyright 2023. @wellkit</p>
